--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ a:visited {
   padding: 14px 20px;
   font-size: 16px;
   cursor: pointer;
-  color: white;
+  color: black;
   font-family: Bellota Text;
   transition: background-color 0.5s ease;
   z-index: 6;
@@ -88,7 +88,6 @@ h3 {
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover,
 .next:hover {
   background-color: rgba(0, 0, 0, 0.8);
