--- a/style.css
+++ b/style.css
@@ -11,15 +11,27 @@ body {
 main {
   flex: 1 0 auto;
 }
-
 a:link,
 a:visited {
   text-decoration: none;
 }
-
 .row {
   display: flex;
   flex-wrap: wrap;
+}
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.column {
+  float: left;
+  width: 33.33%;
+}
+@media screen and (max-width: 600px) {
+  .column {
+    width: 100%;
+  }
 }
 #aboutme-btn {
   background-color: inherit;
