--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
   height: 100%;
-  background-color: #fef9e7;
+  background-color: #FFFFF0;
 }
 main {
   flex: 1 0 auto;
